<?xml version="1.0"?>
<package format="2">
  <name>ole_driver</name>
  <version>1.5.2</version>
  <description>
    ROS device driver for ole 3D LIDARs.
  </description>
  <maintainer email="king@autonomoustuff.com">Jun</maintainer>
  <author>ole</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/ole_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libpcap</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>ole_msgs</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_ole.xml"/>
  </export>
</package>
