<?xml version="1.0"?>
<package format="2">
  <name>ole_laserscan</name>
  <version>1.5.2</version>
  <description>
    Extract a single ring of a ole PointCloud2 and publish it as a LaserScan message
  </description>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
  <author>Micho Radovnikovich</author>
  <author>Kevin Hallenbeck</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ole_laserscan</url>
  <url type="repository">https://github.com/ros-drivers/ole</url>
  <url type="bugtracker">https://github.com/ros-drivers/ole/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
